--- a/VTDI_Gate_Log/VTDI_Gate_Log.csproj
+++ b/VTDI_Gate_Log/VTDI_Gate_Log.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GateInOut.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GateInOut.Designer.cs">
+      <DependentUpon>GateInOut.cs</DependentUpon>
+    </Compile>
     <Compile Include="LogInForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GateInOut.resx">
+      <DependentUpon>GateInOut.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LogInForm.resx">
       <DependentUpon>LogInForm.cs</DependentUpon>
