--- a/VTDI_Gate_Log/VTDI_Gate_Log.csproj
+++ b/VTDI_Gate_Log/VTDI_Gate_Log.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Declare.cs">
+      <DependentUpon>VTDI_gate_model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,10 +65,13 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GateInOut.cs">
-      <SubType>Form</SubType>
+      <DependentUpon>VTDI_gate_model.tt</DependentUpon>
     </Compile>
     <Compile Include="GateInOut.Designer.cs">
       <DependentUpon>GateInOut.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Gender.cs">
+      <DependentUpon>VTDI_gate_model.tt</DependentUpon>
     </Compile>
     <Compile Include="LogInForm.cs">
       <SubType>Form</SubType>
@@ -66,6 +81,30 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Purpose.cs">
+      <DependentUpon>VTDI_gate_model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>VTDI_gate_model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vehicleType.cs">
+      <DependentUpon>VTDI_gate_model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VTDI_gate_model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VTDI_gate_model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VTDI_gate_model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VTDI_gate_model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VTDI_gate_model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VTDI_gate_model.edmx</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +124,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -94,6 +134,13 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EntityDeploy Include="VTDI_gate_model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>VTDI_gate_model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="VTDI_gate_model.edmx.diagram">
+      <DependentUpon>VTDI_gate_model.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -109,6 +156,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\User_cyan_7x_16x_32.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="VTDI_gate_model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>VTDI_gate_model.Context.cs</LastGenOutput>
+      <DependentUpon>VTDI_gate_model.edmx</DependentUpon>
+    </Content>
+    <Content Include="VTDI_gate_model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>VTDI_gate_model.edmx</DependentUpon>
+      <LastGenOutput>VTDI_gate_model.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
