--- a/VTDI_Gate_Log/App.config
+++ b/VTDI_Gate_Log/App.config
@@ -8,7 +8,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="Vtdi_Gate_DatabaseEntities" connectionString="metadata=res://*/VTDI_gate_model.csdl|res://*/VTDI_gate_model.ssdl|res://*/VTDI_gate_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Vtdi_Gate_Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Vtdi_Gate_DatabaseEntities" connectionString="metadata=res://*/VTDI_gate_model.csdl|res://*/VTDI_gate_model.ssdl|res://*/VTDI_gate_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Vtdi_Gate_Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="VTDI_Gate_Log.Properties.Settings.Vtdi_Gate_DatabaseConnectionString"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Vtdi_Gate_Database;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
