--- a/VTDI_Gate_Log/VTDI_Gate_Log.csproj
+++ b/VTDI_Gate_Log/VTDI_Gate_Log.csproj
@@ -93,6 +93,21 @@
     <Compile Include="vehicleType.cs">
       <DependentUpon>VTDI_gate_model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Vtdi_Gate_DatabaseDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Vtdi_Gate_DatabaseDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Vtdi_Gate_DatabaseDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet3.xsd</DependentUpon>
+    </Compile>
     <Compile Include="VTDI_gate_model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -144,6 +159,39 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>VTDI_gate_model.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Vtdi_Gate_DatabaseDataSet1.xsc">
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Vtdi_Gate_DatabaseDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet1.xss">
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet2.xsc">
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Vtdi_Gate_DatabaseDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet2.xss">
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet3.xsc">
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Vtdi_Gate_DatabaseDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Vtdi_Gate_DatabaseDataSet3.xss">
+      <DependentUpon>Vtdi_Gate_DatabaseDataSet3.xsd</DependentUpon>
+    </None>
     <None Include="VTDI_gate_model.edmx.diagram">
       <DependentUpon>VTDI_gate_model.edmx</DependentUpon>
     </None>
